More configurations for fixing flicker

--- a/client/style.css
+++ b/client/style.css
@@ -13,8 +13,7 @@ body {
 
 }
 
-
 [ng\:cloak], [ng-cloak], .ng-cloak {
-    display: none;
+    display: none !important;
 }
 
